--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "full-ahead-ship-management",
+  "name": "full-ahead-marine-offshore",
   "private": true,
   "version": "0.1.0",
   "type": "module",
@@ -13,6 +13,8 @@
     "@emailjs/browser": "^4.4.1",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.0.12",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
