--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.51.1",
     "react-intersection-observer": "^9.8.1",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "resend": "^4.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
